tests/resources/errors/errors18.ac
import std;
import std.Error;

void write_val(int val) {

#if OS_GROUP_WINDOWS
    void* handle = std.GetStdHandle(-11);
    uint32 written;
    char c = as(char) val;
    std.WriteFile(handle, &c, 1, &written, null);
#elif OS_GROUP_UNIX
    char c = as(char) val;
    std.write(1, &c, 1);
#endif

}

struct TestError :: *Error {
    const char* get_name() const {
        return "TestError";
    }
    const char* get_message() const {
        return "error raised!";
    }
}

int foo(bool cond) raises TestError {
    if cond {
        return 64;
    }

    raise TestError{};
}

void main() {
    int$(bool)(raises TestError) f = foo;
    int value = try f(true);
    write_val(value);
    try f(false);
}